initial changes for chrome extension

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="A time-full tribute to a timeless typeface.">
-  <title>HELVETICTOC</title>
+  <title>New Tab</title>
   <link rel="stylesheet" href="css/main.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
-  <div id="colophon">A time-full tribute to a timeless typeface. Brought to you by @<a href="http://twitter.com/tobie">tobie</a>.</div>
+  <div id="colophon">new tab page by <a href="https://github.com/fkscott">keagan</a>. code by @<a href="http://twitter.com/tobie">tobie</a>.</div>
 <script src="js/main.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
